# AI-CyberLogAgent

./: .gitignore  FUNCTIONAL_SPECIFICATION.md  HOW_TO_START_WORK.md  HOW_TO_USE_CONSOLE.md  LICENSE  README.md  TODO_ideas.md  bad_syntax_file.py  log_manage.py  pyproject.toml  test_cicd.py  test_example.py  test_optimized.py
.github/workflows/: mirror_to_gitverse.yml  push_dockerhub.yaml
.gitverse/workflows/: docker-push-axstiz.yaml  ruff_fix.yaml
ai_agent/: agent_settings.py  ai_config.py
ai_cyberlogagent/default_logs_analyse/: log_collector.py  settings_analyse.py
app_simulation/: LOG_GENERATOR_GUIDE.md  LOG_GEN_PATH_FIX.md  NEW_LOG_GENERATOR.md  evaluate_model.py  generate_labeled_test_set.py
app_simulation/log_gen/: LOG_GEN_CHEATSHEET.md  LOG_GEN_CLI_MOVED.md  LOG_GEN_V2_SUMMARY.md  config_loader.py  run_cli.py
config/: commands.py
default_logs_analyse/: __init__.py  log_analyzer.py  log_collector.py  main.py  settings_analyse.py
log_ai-agent/site/: .gitignore  README.md  index.html
log_ai_agent/: .env.example  Dockerfile  README_DOCKER.md  app.py  docker-compose.yml  docker-entrypoint.sh  init-db.sql
log_ai_agent/ai_agent/: RAG_gigachat.py  TEST_GIGACHAT.md  gigachat_async.py  gigachat_chat.py
log_ai_agent/ai_agent/rag_context/: common_threats.json  log_analysis_rules.json  log_patterns.json  response_format.json
log_ai_agent/ai_agent_v2/: INSTALL.md  README.md  __init__.py  app_integration.py  callbacks.py  chat_integration.py  config.py  gigachat_client.py  init_mitre.py  integration.py  models_types.py  run.py  test_full_pipeline.py  test_quick.py
log_ai_agent/ai_agent_v2/chains/: __init__.py  agent1.py  agent2.py  agent3.py  description_agent.py  graph_nodes.py  llm.py  prefilter.py  (+2 more)
log_ai_agent/config/: cfg.py  commands.py
log_ai_agent/db/: models.py
log_ai_agent/debug/: debug_pipeline.py
log_ai_agent/default_logs_analyse/: log_collector.py  settings.py
log_ai_agent/migrations/: 001_add_model_name.sql  002_add_pipeline_breakdown.sql
log_ai_agent/pipeline/: kafka_consumer.py  log_ingest_api.py
log_ai_agent/site/: nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
log_ai_agent/vector/: Dockerfile  vector.toml
log_gen/: __init__.py  cli.py  config_loader.py  log_gen.py
mitre_log_simulator/: Dockerfile  README.md  docker-compose.yml  generator.py  orchestrator.sh  run.ps1
quick_start/: .env.example
terminal_app/: log_manage_settings.py
(+94 files in other folders)
