[project]
name = "ai-cyberlogagent"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "faiss-cpu",
    "fastapi>=0.115.0",
    "gigachat>=0.1.43",
    "huggingface-hub[cli]>=0.36.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-gigachat>=0.3.12",
    "langchain-huggingface>=0.3.1",
    "mitreattack-python>=5.3.0",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.9",
    "pyattck>=4.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.32.0",
]

[tool.setuptools]
packages = ["log_ai_agent", "app_simulation"]


# Совместимо с Ruff 0.4.0+

[lint]
select = [
  "E",   # PEP 8 (pycodestyle)
  "W",
  "F",   # flake8
  "I",   # flake8-import-checker
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade — важно: включено
  "S",   # bandit
  "D",   # pydocstyle
  "ISC", # isort
]

# Включаем режим предварительного просмотра для всех новых правил
preview = true  # включаем все экспериментальные правила
unfixable = []  # не отключаем никакие правила от автоматического исправления
ignore = []  # не игнорируем никакие ошибки, чтобы ничего не пропустить

exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "*.pyc",
  "dist",
  "build",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "*.pyi",
]

# Настройки pycodestyle
[lint.pycodestyle]
max-line-length = 79

# Исключения для __init__.py
[lint.per-file-ignores]
"__init__.py" = ["F401"]

# Форматирование
[format]
indent-style = "space"
# Используем black-совместимые настройки форматирования
quote-style = "double"
line-ending = "auto"
